work for mobile page

--- a/panda-frontend/src/app/dashboard/main/main.component.html
+++ b/panda-frontend/src/app/dashboard/main/main.component.html
@@ -46,12 +46,11 @@
     <p class="text-center">
     <span style="color:red">*This facility is not available for existing clients</span><br>
 
-    *Note OTP will be generated after verification from NCCPL. This process will take about 24 to 48 hours.<br>
-    *Disclaimer In case your data is not verified successfully by NCCPL, OTP will not generate.
+
     </p>
     <div class="text-center p-6 bg-gray-200">
 
-      <a class="text-gray-600 font-black" >Powered by KTrade Securities Limited.</a>
+      <a class="text-gray-600 font-black" >Powered by </a>
     </div>
 
   </footer>
