--- a/panda-frontend/src/app/app.component.html
+++ b/panda-frontend/src/app/app.component.html
@@ -1,2 +1,2 @@
-<ngx-spinner color = "#00ad39" type="ball-scale-multiple"> <span style="color: white;"> KTrade Securities Limited... </span></ngx-spinner>
+<ngx-spinner color = "#00ad39" type="ball-scale-multiple"> <span style="color: white;"> ... </span></ngx-spinner>
 <router-outlet></router-outlet>
