--- a/panda-frontend/src/app/login/login.component.html
+++ b/panda-frontend/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <body  class="grid grid-cols-1 ">
 
-  <div class=" grid grid-cols-1 place-items-center"> <img class=" xs:max-w-[70%] sm:max-w-[70%] lg:max-w-[30%]" src="./assets/KASB-_-Ktrade-logo.png.png"/></div>
+  <!-- <div class=" grid grid-cols-1 place-items-center"> <img class=" xs:max-w-[70%] sm:max-w-[70%] lg:max-w-[30%]" src="./assets/KASB-_-Ktrade-logo.png.png"/></div> -->
 
   <div class="lg:bg-ktgreen lg:p-12">
 
@@ -13,11 +13,11 @@
                       <div class="my-12" style=" display: flex;
                                   justify-content: center;
                                   align-items: center; flex-direction: column; " >
-                            <h1 class="  hidden lg:block font-bold text-2xl bg-contain " style="">Want to  invest in  Oil & Gold</h1>
-                            <h1 class="  hidden lg:block font-bold text-3xl bg-contain " style="">Register Now!</h1>
+                            <h1 class="  hidden lg:block font-bold text-2xl bg-contain " style=""></h1>
+                            <h1 class="  hidden lg:block font-bold text-3xl bg-contain " style="">Collect Payment Now!</h1>
 
                            <!-- <div class="  hidden lg:block m-6  h-96 bg-contain bg-no-repeat" style=" background-image: url('./assets/image.png.png')"> </div> -->
-                           <img class=" hidden lg:block " style="height: 31rem; margin-top: 10px" src="../../assets/image.png.png">
+                           <!-- <img class=" hidden lg:block " style="height: 31rem; margin-top: 10px" src="../../assets/image2.png.png"> -->
                       </div>
                       </div>
                     <div class="h-auto lg:col-span-2 sm:col-span-full xs:col-span-full bg-gradient-to-r from-white to-white m-1  shadow-2xl shadow-ktgreen-500/50 object-contain" style="margin: 0px; border-radius: 24px;">
@@ -29,9 +29,9 @@
                                 <button [routerLink]="'/login'" class="bg-ktgreen hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full">
                                   Login
                                 </button>
-                                <button [routerLink]="'/register'" class=" bg-white border-2 text-gray-400 hover:text-gray-900 font-bold py-2 px-4 rounded-full">
+                                <!-- <button [routerLink]="'/register'" class=" bg-white border-2 text-gray-400 hover:text-gray-900 font-bold py-2 px-4 rounded-full">
                                   Register
-                                </button>
+                                </button> -->
                             </div>
 
                             <br>
@@ -59,7 +59,7 @@
                                   <!-- <re-captcha id="recaptcha"  name="recaptcha" formControlName="recaptchaReactive"  required ></re-captcha> -->
 
 
-                                <a [routerLink]="'../forget'" style="color: green;">Reset Password </a>
+                                <!-- <a [routerLink]="'../forget'" style="color: green;">Reset Password </a> -->
 
                                 <div class="grid grid-cols-1 lg:m-12 xs:m-4  content-center">
                                   <button type="submit" [disabled]="!rForm.valid" class="bg-ktgreen hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full">
