--- a/panda-frontend/src/app/register/register.component.html
+++ b/panda-frontend/src/app/register/register.component.html
@@ -13,11 +13,11 @@
                       <div class="my-12" style=" display: flex;
                                   justify-content: center;
                                   align-items: center; flex-direction: column; " >
-                            <h1 class="  hidden lg:block font-bold text-2xl bg-contain " style="">Want to  invest in  Oil & Gold</h1>
-                            <h1 class="  hidden lg:block font-bold text-3xl bg-contain " style="">Register Now!</h1>
+                            <h1 class="  hidden lg:block font-bold text-2xl bg-contain " style=""></h1>
+                            <h1 class="  hidden lg:block font-bold text-3xl bg-contain " style="">Collect Payment Now!</h1>
 
                            <!-- <div class="  hidden lg:block m-6  h-96 bg-contain bg-no-repeat" style=" background-image: url('./assets/image.png.png')"> </div> -->
-                           <img class=" hidden lg:block " style="height: 31rem; margin-top: 10px" src="../../assets/image.png.png">
+                           <!-- <img class=" hidden lg:block " style="height: 31rem; margin-top: 10px" src="../../assets/image.png.png"> -->
                       </div>
                       </div>
                     <div class="h-auto  lg:col-span-2 sm:col-span-full xs:col-span-full bg-gradient-to-r from-white to-white m-1  shadow-2xl shadow-ktgreen-500/50 object-contain" style="margin: 0px; border-radius: 24px;">
