--- a/panda-frontend/src/app/guard/residency/list/list.component.html
+++ b/panda-frontend/src/app/guard/residency/list/list.component.html
@@ -17,7 +17,11 @@
 
     </div>
       </form>
-
+      <div class="my-4" style="float: right;">
+        <a (click)="openDialogBillForAll()" class="bg-transparent border border-green-500 text-green-500 hover:bg-green-500 hover:text-white text-center py-2 px-4 rounded">
+          Generate Bill
+        </a>
+      </div>
       <div class="my-4" style="float: right;">
         <a (click)="openDialog()" class="bg-transparent border border-green-500 text-green-500 hover:bg-green-500 hover:text-white text-center py-2 px-4 rounded">
           Create
