starting work for opening balance

--- a/panda-frontend/src/app/guard/main/guard.component.html
+++ b/panda-frontend/src/app/guard/main/guard.component.html
@@ -95,7 +95,7 @@
               <a href="#" class="flex items-center py-4 px-2">
                 <!-- <img src="logo.png" alt="Logo" class="h-8 w-8 mr-2" /> -->
                 <span class="font-semibold text-white text-lg"
-                  >Blessing</span
+                  >Bliss</span
                 >
               </a>
             </div>
