--- a/panda-frontend/src/app/login/login.component.html
+++ b/panda-frontend/src/app/login/login.component.html
@@ -1,10 +1,10 @@
 <body  class="grid grid-cols-1 ">
 
-  <!-- <div class=" grid grid-cols-1 place-items-center"> <img class=" xs:max-w-[70%] sm:max-w-[70%] lg:max-w-[30%]" src="./assets/KASB-_-Ktrade-logo.png.png"/></div> -->
+  <div class=" grid grid-cols-1 place-items-center"> <img class=" xs:max-w-[70%] sm:max-w-[70%] lg:max-w-[30%]" src="./assets/building.jpg"/></div>
 
   <div class="lg:bg-ktgreen lg:p-12">
 
-       <div class="lg:bg-themeyello xs:bg-white " style=" border-radius: 24px;">
+       <div class="lg:bg-white xs:bg-white " style=" border-radius: 24px;">
 
            <div class="h-auto grid grid-cols-1  ">
                 <div class="grid lg:grid-cols-5 xs:grid-cols-1 gap-0">
@@ -16,8 +16,8 @@
                             <h1 class="  hidden lg:block font-bold text-2xl bg-contain " style=""></h1>
                             <h1 class="  hidden lg:block font-bold text-3xl bg-contain " style="">Collect Payment Now!</h1>
 
-                           <!-- <div class="  hidden lg:block m-6  h-96 bg-contain bg-no-repeat" style=" background-image: url('./assets/image.png.png')"> </div> -->
-                           <!-- <img class=" hidden lg:block " style="height: 31rem; margin-top: 10px" src="../../assets/image2.png.png"> -->
+                           <!-- <div class="  hidden lg:block m-6  h-96 bg-contain bg-no-repeat" style=" background-image: url('./assets/building.jpg')"> </div> -->
+                           <img class=" hidden lg:block " style="height: 31rem; margin-top: 10px" src="../../assets/main_building.jpg">
                       </div>
                       </div>
                     <div class="h-auto lg:col-span-2 sm:col-span-full xs:col-span-full bg-gradient-to-r from-white to-white m-1  shadow-2xl shadow-ktgreen-500/50 object-contain" style="margin: 0px; border-radius: 24px;">
