--- a/panda-frontend/src/app/guard/residency/list/list.component.html
+++ b/panda-frontend/src/app/guard/residency/list/list.component.html
@@ -17,12 +17,12 @@
 
     </div>
       </form>
-      <div class="my-4" style="float: right;">
+      <div *ngIf="auth.currentUser['user_type'] == 'admin'" class="my-4" style="float: right;">
         <a (click)="openDialogBillForAll()" class="bg-transparent border border-green-500 text-green-500 hover:bg-green-500 hover:text-white text-center py-2 px-4 rounded">
           Generate Bill
         </a>
       </div>
-      <div class="my-4" style="float: right;">
+      <div *ngIf="auth.currentUser['user_type'] == 'admin'" class="my-4" style="float: right;">
         <a (click)="openDialog()" class="bg-transparent border border-green-500 text-green-500 hover:bg-green-500 hover:text-white text-center py-2 px-4 rounded">
           Create
         </a>
@@ -104,12 +104,12 @@
 
           <td
               class="flex flex-row px-6 py-4 text-sm leading-5 text-gray-500 whitespace-no-wrap border-b border-gray-200">
-              <svg matTooltip="Edit this UKN" (click)="openDialog(item)" xmlns="http://www.w3.org/2000/svg" class="mx-0 w-6 h-6 text-green-400" fill="none"
+              <svg *ngIf="auth.currentUser['user_type'] == 'admin'" matTooltip="Edit this UKN" (click)="openDialog(item)" xmlns="http://www.w3.org/2000/svg" class="mx-0 w-6 h-6 text-green-400" fill="none"
                   viewBox="0 0 24 24" stroke="currentColor">
                   <path  stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                       d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
               </svg>
-              <svg matTooltip="Delete this UKN" (click)="openDialogDelete(item)" class="w-6 h-6 text-red-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path></svg>
+              <svg *ngIf="auth.currentUser['user_type'] == 'admin'" matTooltip="Delete this UKN" (click)="openDialogDelete(item)" class="w-6 h-6 text-red-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path></svg>
 
               <svg matTooltip="Status" (click)="residencyStatus(item)" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z" />
