updatd balance and payment of the month

--- a/panda-frontend/src/app/guard/residency/list/list.component.html
+++ b/panda-frontend/src/app/guard/residency/list/list.component.html
@@ -49,6 +49,9 @@
           <th mat-sort-header="email"
               class="px-6 py-3 text-xs font-medium leading-4 tracking-wider text-left text-gray-500 uppercase border-b border-gray-200 bg-gray-50">
               Name</th>
+          <th mat-sort-header="email"
+              class="px-6 py-3 text-xs font-medium leading-4 tracking-wider text-left text-gray-500 uppercase border-b border-gray-200 bg-gray-50">
+              Balance</th>
           <th
               class="px-6 py-3 text-xs font-medium leading-4 tracking-wider text-left text-gray-500 uppercase border-b border-gray-200 bg-gray-50">
               Address</th>
@@ -58,13 +61,6 @@
           <th
               class="px-6 py-3 text-xs font-medium leading-4 tracking-wider text-left text-gray-500 uppercase border-b border-gray-200 bg-gray-50">
               Car</th>
-          <th
-              class="px-6 py-3 text-xs font-medium leading-4 tracking-wider text-left text-gray-500 uppercase border-b border-gray-200 bg-gray-50">
-             Tenant Mobile</th>
-          <th
-              class="px-6 py-3 text-xs font-medium leading-4 tracking-wider text-left text-gray-500 uppercase border-b border-gray-200 bg-gray-50">
-             Tenant Car</th>
-
           <th
               class="px-6 py-3 text-xs font-medium leading-4 tracking-wider text-left text-gray-500 uppercase border-b border-gray-200 bg-gray-50">
               Actions
@@ -84,6 +80,10 @@
           </td>
 
           <td class="px-6 py-4 whitespace-no-wrap border-b border-gray-200">
+            <div class="text-sm leading-5 text-gray-500">{{item.balance}}</div>
+          </td>
+
+          <td class="px-6 py-4 whitespace-no-wrap border-b border-gray-200">
             <div class="text-sm leading-5 text-gray-500">{{item.address}}</div>
           </td>
 
@@ -93,13 +93,6 @@
           <td class="px-6 py-4 whitespace-no-wrap border-b border-gray-200">
             <div class="text-sm leading-5 text-gray-500">{{item.car}}</div>
           </td>
-          <td class="px-6 py-4 whitespace-no-wrap border-b border-gray-200">
-            <div class="text-sm leading-5 text-gray-500">{{item.tenant_mobile}}</div>
-          </td>
-          <td class="px-6 py-4 whitespace-no-wrap border-b border-gray-200">
-            <div class="text-sm leading-5 text-gray-500">{{item.tenant_car}}</div>
-          </td>
-
 
 
           <td
