--- a/panda-frontend/src/app/guard/residency/receive-payment/receive-payment.component.html
+++ b/panda-frontend/src/app/guard/residency/receive-payment/receive-payment.component.html
@@ -19,11 +19,23 @@
                       <mat-error *ngIf="form_error('paid_amount', 'pattern')">Special Character not allowed </mat-error>
                       <!-- <mat-hint>CNIC</mat-hint> -->
                   </mat-form-field>
+                </div>
+
+
+                <div>
+                <mat-form-field appearance="fill">
+                  <mat-label>Description</mat-label>
+                  <mat-select formControlName="description" multiple>
+                    <!-- <mat-select-trigger>
+                      {{toppings.value?.[0] || ''}}
+                      <span *ngIf="(toppings.value?.length || 0) > 1" class="example-additional-selection">
+                        (+{{(toppings.value?.length || 0) - 1}} {{toppings.value?.length === 2 ? 'other' : 'others'}})
+                      </span>
+                    </mat-select-trigger> -->
+                    <mat-option *ngFor="let topping of descriptionList" [value]="topping">{{topping}}</mat-option>
+                  </mat-select>
+                </mat-form-field>
               </div>
-
-
-
-
 
 </div>
 
