--- a/panda-frontend/src/app/guard/residency/payment-status/payment-status.component.html
+++ b/panda-frontend/src/app/guard/residency/payment-status/payment-status.component.html
@@ -16,5 +16,6 @@
 
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Close</button>
+  <button mat-button (click)="receivePaymentHistory()" >Payment History</button>
   <button mat-button (click)="receivePayment()" >Collect Payment</button>
 </mat-dialog-actions>
